# enocoro128v2

./: Cargo.toml  LICENSE  README.md  README.tpl  gen_readme.sh
.github/workflows/: clippy.yml  test.yml
src/: consts.rs  lib.rs  test.rs
tests/: README.md  official_test_vectors.txt  test_public_api.rs
