[package]
name = "enocoro128v2"
version = "0.1.0"
authors = ["tnballo <tnballo@users.noreply.github.com>"]
edition = "2018"

[dependencies]
zeroize = {version = "1.1.0", features = ["zeroize_derive"], default-features = false}
static_assertions = "1.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = 'abort'
opt-level = 3
debug = false
rpath = false
lto = "thin"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

#[profile.small]
#panic = 'abort'
#opt-level = 'z'
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#incremental = false
#overflow-checks = false