[package]
name = "enocoro128v2"
version = "0.1.4"
authors = ["Tiemoko Ballo"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/entropy-security/enocoro128v2"
repository = "https://github.com/entropy-security/enocoro128v2"
documentation = "https://docs.rs/enocoro128v2"
categories = ["cryptography", "no-std", "embedded"]
keywords = ["encryption", "no-std", "enocoro", "enocoro128", "enocoro128v2"]
description = "Safe, no-std Enocoro-128 (Version 2) stream cipher implementation. Verified using Hitachi's official test vectors."
include = [
    "**/*.rs",
    "**/*.md",
    "**/*.txt",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
zeroize = {version = "1.1.0", features = ["zeroize_derive"], default-features = false}
static_assertions = "1.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = 'abort'
opt-level = 3
debug = false
rpath = false
lto = "thin"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

#[profile.small]
#panic = 'abort'
#opt-level = 'z'
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#incremental = false
#overflow-checks = false
