[package]
name = "enocoro128v2"
version = "0.1.6"
authors = ["Tiemoko Ballo"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/entropic-security/enocoro128v2"
repository = "https://github.com/entropic-security/enocoro128v2"
documentation = "https://docs.rs/enocoro128v2"
categories = ["cryptography", "no-std", "embedded"]
keywords = ["encryption", "no_std", "enocoro", "enocoro128", "enocoro128v2"]
description = "Safe, embedded-friendly Enocoro-128 (Version 2) stream cipher. Verified using Hitachi's official test vectors."
include = [
    "**/*.rs",
    "**/*.md",
    "**/*.txt",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
zeroize = {version = "^1", features = ["zeroize_derive"], default-features = false}
static_assertions = "^1"